kubernetes/infrastructure/prod/longhorn/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://${HOST_LONGHORN}.${DOMAIN}"
    gethomepage.dev/description: Block storage for Kubernetes
    gethomepage.dev/group: Storage
    gethomepage.dev/icon: longhorn.png
    gethomepage.dev/name: Longhorn
    gethomepage.dev/app: longhorn  # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${HOST_LONGHORN}.${DOMAIN}`)
      services:
        - kind: Service
          name: longhorn-frontend
          namespace: longhorn-system
          port: 80
      middlewares:
        - name: x-forwarded-proto-https
          namespace: traefik
        - name: oidc
          namespace: traefik
  tls:
    secretName: longhorn.${DOMAIN}
